# md_tool

./: .gitignore  README-DEV.md  README.md  pipeline_structure.md  pyproject.toml  split_markdown.py
md_tools/: __init__.py  cli.py  manpage.py  paragraphs.py  utils.py
md_tools/combine/: __init__.py
md_tools/format_newlines/: README.md  __init__.py
md_tools/pipeline/: __init__.py  command.py  core.py  output_utils.py  stage_runner.py  tool_adapter.py  types.py
md_tools/pipeline/combine/: __init__.py
md_tools/pipeline/format_newlines/: __init__.py
md_tools/pipeline/split/: __init__.py
md_tools/pipeline/translate_md/: __init__.py
md_tools/split/: __init__.py
md_tools/tool_manager/: __init__.py  manager.py
md_tools/tools/: __init__.py  base.py
md_tools/translate/: __init__.py  cancellation.py  text.py  translate_md.py
md_tools/tui/: __init__.py  _compat.py  app.py  constants.py  step_four.py  step_one.py  step_three.py  step_two.py  types.py
md_tools/tui/steps/: __init__.py  common.py  files.py  outputs.py  pipeline.py
test/: smoke_pipeline.py  smoke_tool_manager.py  test_tool_adapter.py  test_translate_paragraphs.py  test_tui_outputs.py
